--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,12 @@
+@import "reset";
+
+@font-face {
+  font-family: "CooperBlack";
+  font-style: normal;
+  font-weight: 400;
+  src: local(""), url("../fonts/CooperBlackStd.woff2") format("woff2");
+}
+
 $pink: #ffe2ee;
 $dropshadow: #fcc5dc;
 
@@ -16,6 +25,7 @@ html {
 
 body {
   overflow-x: hidden;
+  font-family: "CooperBlack", Arial, Helvetica, sans-serif;
 }
 
 *,
@@ -24,6 +34,14 @@ body {
   -webkit-box-sizing: inherit;
   -moz-box-sizing: inherit;
   box-sizing: inherit;
+}
+
+.webgl {
+  position: fixed;
+  top: 0;
+  left: 0;
+  outline: none;
+  z-index: -3; /* testing */
 }
 
 h1,
@@ -40,6 +58,10 @@ h1 {
   text-shadow: 4px 4px $dropshadow;
 }
 
+h2 {
+  font-size: 3.125rem;
+  margin-bottom: 20px;
+}
 h3 {
   font-size: 5.625rem;
 }
@@ -48,9 +70,24 @@ h4 {
   font-size: 1.75rem;
 }
 
+p {
+  font-size: 1.875rem;
+  text-shadow: 3px 3px $dropshadow;
+  color: #fff;
+  text-align: center;
+}
+
+main {
+  width: 100%;
+  max-width: 1440px;
+  padding: 0 40px;
+  margin: 0 auto;
+
+  min-height: 100vh;
+}
 header {
   min-height: 100vh;
-  min-width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -59,6 +96,57 @@ header {
 section {
   width: 100%;
   min-height: 100vh;
+
+  .birthday-msg {
+    position: relative;
+    z-index: 5;
+    max-width: 750px;
+    margin: 0 auto;
+  }
+}
+
+.polaroid {
+  min-height: 310px;
+  width: 263px;
+
+  figure {
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+  }
+
+  p {
+    font-size: 1.625;
+    text-shadow: none;
+    color: #0a0a0a;
+    padding: 20px 0;
+  }
+
+  &.right-tilt {
+    margin-left: auto;
+    .polaroid__container {
+      transform: rotate(5deg);
+    }
+  }
+
+  &.left-tilt {
+    margin-right: auto;
+    .polaroid__container {
+      transform: rotate(-5deg);
+    }
+  }
+  &__container {
+    background-color: #fff;
+    min-height: 310px;
+    width: 263px;
+    padding: 14px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  }
 }
 
 footer {
