--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -40,6 +40,10 @@ body {
   z-index: -3; /* testing */
 }
 
+.scribblefont {
+  font-family: "Scribble", Arial, Helvetica, sans-serif;
+}
+
 .color-yellow {
   &.active {
     p,
@@ -53,6 +57,8 @@ body {
 }
 
 .col-two {
+  margin: 0 auto;
+  max-width: 1200px;
   display: flex;
   padding: 100px 0;
   @include media($tablet-bp...) {
@@ -70,7 +76,7 @@ body {
     }
   }
   .polaroid__container {
-    margin: 0 auto;
+    // margin: 0 auto;
   }
 }
 
@@ -151,6 +157,14 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+
+  .cupcake {
+    position: absolute;
+    bottom: -80px;
+    width: 100%;
+    height: 20px;
+  }
 }
 
 section {
@@ -258,6 +272,15 @@ footer {
     display: flex;
     flex-direction: column;
   }
+
+  h3 {
+    padding-bottom: 30px;
+  }
+
+  p {
+    max-width: 900px;
+    margin: 0 auto;
+  }
 }
 
 .loading-svg {
@@ -279,4 +302,10 @@ footer {
     opacity: 0;
     user-select: none;
   }
+}
+
+.k-love {
+  position: absolute;
+  bottom: -305px;
+  left: -100px;
 }
