--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -182,9 +182,16 @@ section {
     z-index: 5;
     width: 100%;
     margin: 0 auto;
-    p {
+    p,
+    h4 {
       max-width: 900px;
       margin: 0 auto;
+    }
+
+    h4 {
+      font-size: 32px;
+      padding-bottom: 25px;
+      margin-top: 150px;
     }
   }
 }
@@ -308,4 +315,22 @@ footer {
   position: absolute;
   bottom: -305px;
   left: -100px;
+}
+
+.dotdot {
+  padding-top: 30px;
+  padding-bottom: 20px;
+  display: inline-block;
+}
+
+.maxwidth {
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.upout {
+  transform: translate(25%, -50%);
+  @include media($tablet-bp...) {
+    transform: none;
+  }
 }
